5.3.2
-----
1. Only show play/add button text if showing detailed sub-toolbar.
2. Don't add HTML formatting to audio, or other clickable, entries.
3. Fix listing album tracks under My Music / Works / Composer / COMPOSER /
   WORK / ALBUM
4. Fix background colour of 'Update information' screen.

5.3.1
-----
1. Delay drag-n-drop, via Polyfill, for 1/4 of a second so that it does not
   interfere with scrolling.
2. Improve drag scrolling.

5.3.0
-----
 1. When navigating into an album, artist, work, or playlist from favourites
    attempt to obtain DB IDs and navigate using those.
 2. Remove 'Dark' theme and rename 'Darker' to 'Dark'.
 3. Simplify themes.
 4. Fix showing detailed sub-toolbar on mobile layout.
 5. Only draw blurred background in detailed sub-toolbar if browse view is set
    to draw background images.
 6. Consistent search library icon.
 7. Add option to tint background colour, if supported by browser.
 8. Use detailed sub-toolbar if width is 350px or more.
 9. If using 'colour from cover' and have no track then default to 'Blue'
    colours.
10. If using detailed sub-toolbar then place home button below back button.
11. Use 'My Music' categories as basis of categories to show under Genres and
    Years.
12. If using 'colour from cover' then choose nearest colour from palette for
    highlight colour.
13. More role icons.
14. Add 'Release type' to advanced search, for LMS9 onwards.
15. Fix download via browser.
16. Don't add HTML formatting to weblink entries.
17. If delete a saved 'Random Mix' then also un-pin from homescreen.
18. Fix toggling 'Radios' non in 'Apps'.
19. Use Polyfill to fix drag-n-drop in Android.

5.2.6
-----
1. Allow to open server settings via 'action=dlg.open/serversettings' URL
   query.
2. Tweak maskable icon.
3. Add a 1024x1024 icon.
4. Don't add 80x80 icon to HTML for mobile devices.
5. Only refresh MAI album column if applicable.
6. Fix colour of toggle queue button in desktop now-playing bar if using
   coloured toolbars.
